--- a/Barsoom.xcodeproj/xcshareddata/xcschemes/Barsoom-iOS.xcscheme
+++ b/Barsoom.xcodeproj/xcshareddata/xcschemes/Barsoom-iOS.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "523140E2265A1B1800C5044C"
-               BuildableName = "Barsoom.app"
-               BlueprintName = "Barsoom"
+               BuildableName = "Barsoom-iOS.app"
+               BlueprintName = "Barsoom-iOS"
                ReferencedContainer = "container:Barsoom.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "52B3E2542682EAC000405A2B"
-               BuildableName = "BarsoomTests"
-               BlueprintName = "BarsoomTests"
+               BuildableName = "Barsoom-tests"
+               BlueprintName = "Barsoom-tests"
                ReferencedContainer = "container:Barsoom.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -65,8 +65,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "523140E2265A1B1800C5044C"
-            BuildableName = "Barsoom.app"
-            BlueprintName = "Barsoom"
+            BuildableName = "Barsoom-iOS.app"
+            BlueprintName = "Barsoom-iOS"
             ReferencedContainer = "container:Barsoom.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -82,8 +82,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "523140E2265A1B1800C5044C"
-            BuildableName = "Barsoom.app"
-            BlueprintName = "Barsoom"
+            BuildableName = "Barsoom-iOS.app"
+            BlueprintName = "Barsoom-iOS"
             ReferencedContainer = "container:Barsoom.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
